--- a/public/screen.css
+++ b/public/screen.css
@@ -9,5 +9,27 @@ html {
 body {
 	margin: 0;
 	min-height: 100%;
+}
+
+header {
+	width: 50%;
+}
+
+section {
+	background-color: #f3f3f3;
 	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-content: center;
+}
+
+ul {
+	list-style: none;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+img {
+	border: 0.09rem solid lightgray;
+	width: 100%;
 }
