--- a/public/screen.css
+++ b/public/screen.css
@@ -10,9 +10,23 @@ body {
 	margin: 0;
 	min-height: 100%;
 }
-
+.logo {
+	border: none;
+}
 header {
-	width: 50%;
+	width: 45%;
+}
+
+main {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+figure {
+	width: 40%;
 }
 
 section {
@@ -32,4 +46,8 @@ ul {
 img {
 	border: 0.09rem solid lightgray;
 	width: 100%;
+}
+
+footer {
+	border-top: 0.09rem solid lightgray;
 }
