Added the triangles and changed around padding.

--- a/public/screen.css
+++ b/public/screen.css
@@ -12,7 +12,7 @@ a {
 	font-weight: bold;
 }
 
-a:hover {
+.navhover:hover {
 	color: #2780ca;
 }
 
@@ -41,6 +41,11 @@ figure {
 	border-bottom: 0.09rem solid #cacaca;
 }
 
+figcaption {
+	padding-left: 2rem;
+	padding-right: 2rem;
+}
+
 section {
 	background-color: #f3f3f3;
 	display: flex;
@@ -56,8 +61,8 @@ ul {
 }
 
 li {
-	padding-left: 1rem;
-	padding-right: 1rem;
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
 }
 img {
 	border: 0.09rem solid #cacaca;
@@ -76,8 +81,11 @@ footer {
 }
 
 .logolink {
+	width: 100%;
 	border: none;
 	padding-top: 0.5rem;
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
 }
 
 p {
@@ -86,9 +94,30 @@ p {
 }
 
 .userphotos {
-	width: 35%;
+	width: 65%;
 	border: none;
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	align-content: center;
 }
+
+.triangle {
+	content: ‘’;
+	height: 0;
+	width: 0;
+	border: 10px solid transparent;
+	border-top-color: #cacaca;
+	float: right;
+	position: relative;
+	right: 17px;
+	top: 0;
+	border-bottom: 0px;
+}
+
+/* .triangle {
+  width: 0; 
+  height: 0; 
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-top: 20px solid #f00;
+} 
